--- a/hyperkitty/static/hyperkitty/less/hyperkitty-overview.less
+++ b/hyperkitty/static/hyperkitty/less/hyperkitty-overview.less
@@ -206,8 +206,6 @@
         }
         .thread .thread-title {
             max-height: 1.8em;
-            overflow: hidden;
-            text-overflow: ellipsis;
         }
     }
     .overview .gravatar {
