--- a/hyperkitty/static/hyperkitty/less/hyperkitty-threadslist.less
+++ b/hyperkitty/static/hyperkitty/less/hyperkitty-threadslist.less
@@ -33,8 +33,11 @@
         .thread-category {
             padding-bottom: 0.25em;
         }
-        .likestatus {
+        .likestatus + span {
             padding-right: 1em;
+        }
+        .likestatus {
+            vertical-align: -2px;
         }
         .list-stats {
             padding-bottom: 0.25em;
